--- a/pages/members.html
+++ b/pages/members.html
@@ -104,15 +104,15 @@
                         </div>
                         <a href="https://www.linkedin.com/in/elad-amar/" target="_blank" class="member-name">Elad Amar</a>
                         <p>M.Sc. (2023)</p>
-                        <p><b>Research Topic: </b> </p>
+                        <p><b>Research Topic: </b> Space Weather</p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
                             <img src="./assets/members/ilangit-150x150.jpg" alt="Ilan Git member image">
                         </div>
                         <a href="" target="_blank" class="member-name">Ilan Git</a>
-                        <p>M.Sc. (2022)</p>
-                        <p><b>Research Topic: </b> </p>
+                        <p>M.Sc. (2023)</p>
+                        <p><b>Research Topic: </b> Autonomous Tracking of Marine Animals Using Single Acoustic Beacon</p>
                         <p><b>Currently:</b> Head of Data Science at BLST Security</p>
                     </div>
                     <div class="student_box_alumni">
@@ -123,27 +123,9 @@
                         </div>
                         <a href="https://www.cs.bgu.ac.il/~rotemra/" target="_blank" class="member-name">Rotem Mairon</a>
                         
-                        <p>Ph.D (2021)</p>
-                        <p><b>Research Topic: </b> </p>
+                        <p>Ph.D (2022)</p>
+                        <p><b>Research Topic: </b> Fixations Visual Relations</p>
                         <p><b>Currently:</b> ML/CV Algorithm Developer at Voyage81 </p>
-                    </div>
-                    <div class="student_box_alumni">
-                        <div class="student_box_img">
-                            <img src="./assets/members/lab_profile-150x150.jpg" alt="Peleg Harel member image">
-                        </div>
-                        <a href="#" class="member-name">Peleg Harel</a>
-                        <p>M.Sc. (2020)</p>
-                        <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> Computer Vision Engineer at Snap Inc. </p>
-                    </div>
-                    <div class="student_box_alumni">
-                        <div class="student_box_img">
-                            <img src="./assets/members/ben-e1551164852316-150x150.jpg" alt="Ben Vardi member image">
-                        </div>
-                        <a href="#" class="member-name">Ben Vardi</a>
-                        <p>M.Sc. (2020)</p>
-                        <p><b>Research Topic: </b> </p>
-                        <p><b>Currently:</b> Computer Vision Engineer at Snap Inc. </p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -153,8 +135,26 @@
                         </div>
                         <a href="https://www.roytoren.com/about" target="_blank" class="member-name">Roy Toren</a>
                         <p>M.Sc. (2022)</p>
-                        <p><b>Research Topic: </b> </p>
+                        <p><b>Research Topic: </b> Archeological 3D Puzzle Solving</p>
                         <p><b>Currently:</b> Deep Learning Researcher at dataspan.ai</p>
+                    </div>
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <img src="./assets/members/lab_profile-150x150.jpg" alt="Peleg Harel member image">
+                        </div>
+                        <a href="#" class="member-name">Peleg Harel</a>
+                        <p>M.Sc. (2021)</p>
+                        <p><b>Research Topic: </b> Solving Crossing_Cuts Polygonal_Puzzles as a Physical Mechanical System </p>
+                        <p><b>Currently:</b> Computer Vision Engineer at Snap Inc. </p>
+                    </div>
+                    <div class="student_box_alumni">
+                        <div class="student_box_img">
+                            <img src="./assets/members/ben-e1551164852316-150x150.jpg" alt="Ben Vardi member image">
+                        </div>
+                        <a href="#" class="member-name">Ben Vardi</a>
+                        <p>M.Sc. (2021)</p>
+                        <p><b>Research Topic: </b> Puzzle Solving with Relaxation Labeling</p>
+                        <p><b>Currently:</b> Computer Vision Engineer at Snap Inc. </p>
                     </div>
                     <div class="student_box_alumni">
                         <div class="student_box_img">
@@ -163,7 +163,7 @@
                             </a>
                         </div>
                         <a href="http://www.boazarad.com/" target="_blank" class="member-name">Boaz Arad</a>
-                        <p>Ph.D (2018)</p>
+                        <p>Ph.D (2019)</p>
                         <p><b>Research Topic: </b> Hyperspectral Imaging</p>
                         <p><b>Currently:</b> Chief Vision Officer at ODDITY</p>
                     </div>
