--- a/pages/members.html
+++ b/pages/members.html
@@ -23,7 +23,7 @@
                             </a>
                         </div>
                         <a href="http://www.cs.bgu.ac.il/~ben-shahar/" target="_blank" class="member-name">Ohad Ben-Shahar</a>
-                        <p>Principle Investigator</p>
+                        <p>Principal Investigator</p>
                     </div>
                     <div class="student_box">
                         <div class="student_box_img">
