--- a/pages/research.html
+++ b/pages/research.html
@@ -15,7 +15,6 @@
 
 <h1>Research</h1>
 <p>Some (though not all) of our research projects include databases, code, online experimental systems for data collection, or just nice stimuli or demos worth showing. Please visit those projects with online material in the links below but do not forget to visit the lab's publication page for all our other research projects.</p>
-<h2>Active Research</h2>
 <div class="research-grid">
     <div class="research-item">
         <a href="pages/researches/Multi-Phase-Relaxation.html">
@@ -59,10 +58,7 @@
             <p>Agrovision</p>
         </a>
     </div>
-</div>
 
-<h2>Past Research</h2>
-<div class="research-grid">
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/the-owlcam-project/">
             <img src="./assets/research/gifs/projects-index-OwlCam-anim.gif" alt="The OwlCam Project">
@@ -70,37 +66,37 @@
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/visual-salience/">
+        <a href="pages/researches/Contextual_Emergence_of_Object_Saliency.html">
             <img src="./assets/research/gifs/ASD_1_27_27491_Web1.gif" alt="Contextual Emergence of Object Saliency">
             <p>Contextual Emergence of Object Saliency</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/3d-pose-from-symmetry/">
+        <a href="pages/researches/Symmetry_And_Pose_Estimation_In_3D_Data.html">
             <img src="./assets/research/gifs/3d_chair-768x576.jpg" alt="Symmetry and Pose Estimation in 3D Data">
             <p>Symmetry and Pose Estimation in 3D Data</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/scene-gist-categorization-from-perceptual-relations/">
+        <a href="pages/researches/Scene_Gist_Recognition_from_Perceptual_Relations.html">
             <img src="./assets/research/gifs/projects-index-gist-anim.gif" alt="Scene Gist Recognition from Perceptual Relations">
             <p>Scene Gist Recognition from Perceptual Relations</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/polar-optic-flow/">
+        <a href="pages/researches/Polar_Representation_of_Motion_and_Optical_Flow.html">
             <img src="./assets/research/gifs/projects-index-polar-anim.gif" alt="Polar Representation of Motion and Optical Flow">
             <p>Polar Representation of Motion and Optical Flow</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/shape-from-specular-flow/">
+        <a href="pages/researches/Shape_from_Specular_Flow.html">
             <img src="./assets/research/gifs/projects-index-sfsf-anim1.gif" alt="Shape from Specular Flow">
             <p>Shape from Specular Flow</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/active-contours/">
+        <a href="pages/researches/Free_Boundary_Conditions_Active_Contours.html">
             <img src="./assets/research/gifs/projects-index-FBCAC-anim.gif" alt="Free Boundary Conditions Active Contours">
             <p>Free Boundary Conditions Active Contours</p>
         </a>
