adding all researches with assets (not completed yet)

--- a/pages/researches/Polar_Representation_of_Motion_and_Optical_Flow.html
+++ b/pages/researches/Polar_Representation_of_Motion_and_Optical_Flow.html
@@ -24,7 +24,7 @@
                </section>
 
                 <h2>Download Code</h2>
-                <p>You are welcome to download the <a href="http://www.cs.bgu.ac.il/~icvl/projects/project-polar-files/polarOpticalFlow.zip">polar based optical flow estimation code</a>. Please note that this implementation is using <a href="http://www.cs.brown.edu/~dqsun/">Deqing Sun's optical flow implementation from Sun et al., CVPR 2010.</a></p>
+                <p>You are welcome to download the <a href="https://www.cs.bgu.ac.il/~icvl/projects/project-polar-files/polarOpticalFlow.zip">polar based optical flow estimation code</a>. Please note that this implementation is using <a href="http://www.cs.brown.edu/~dqsun/">Deqing Sun's optical flow implementation from Sun et al., CVPR 2010.</a></p>
 
                 <h2>Papers</h2>
                 <p><a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Adato_Zickler_and_Ben_Shahar-A_Polar_Representation_of_Motion_and_Implications_for_Optical_Flow.pdf">A polar representation of motion and implications for optical flow</a>, In the <em>Proceedings of the IEEE International Conference on Computer Vision and Pattern Recognition (CVPR),</em> Colorado Springs, USA, June, pp. 1145-1152, 2011.</p>
