--- a/pages/researches/hyperspectral-imaging.html
+++ b/pages/researches/hyperspectral-imaging.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some Page Title</title>
+    <title>Hyperspectral Imaging from low-cost sensors</title>
     <base href="/ICVL/">
     <link rel="stylesheet" href="css/all.css">
 </head>
@@ -11,7 +11,7 @@
     <div id="header-placeholder"></div>
     <div class="main-container">
         <main id="content">
-<h1>Hyperspectral Imaging from low-cost sensors</h1>
+<h2>Hyperspectral Imaging from low-cost sensors</h2>
 
 <section class="research-section">
     <p>In contrast to most artificial and biological optical sensors, hyperspectral imaging systems allow us to accurately recover the full spectral profile of each point in the observed scene. This rich spectral information has been explored and exploited in many fields such as astronomy, biology, chemistry, agriculture, geology, environmental studies, and in a wide variety of other academic and commercial applications. Here at the ICVL, we are using cutting-edge equipment to explore new avenues of research in the field of hyperspectral imagery. The project described on this page explores hyperspectral acquisition from very low-cost multispectral (and in particular, RGB) sensors.</p>
