--- a/pages/researches/Contextual_Emergence_of_Object_Saliency.html
+++ b/pages/researches/Contextual_Emergence_of_Object_Saliency.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrovision</title>
+    <title>Contextual Emergence of Object Saliency</title>
     <base href="/ICVL/">
     <link rel="stylesheet" href="css/all.css">
 </head>
