--- a/pages/resources.html
+++ b/pages/resources.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some Page Title</title>
+    <title>Resources</title>
     <base href="/ICVL/">
     <link rel="stylesheet" href="css/all.css">
 </head>
