--- a/pages/seminar.html
+++ b/pages/seminar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some Page Title</title>
+    <title>seminar</title>
     <base href="/ICVL/">
     <link rel="stylesheet" href="css/all.css">
 
