Members update+cutting cross
Added members linkedin pages loading, also added a dataset for the cutting cross for Ofir

--- a/pages/researches/Computational-Polygonal-Puzzle-Solving.html
+++ b/pages/researches/Computational-Polygonal-Puzzle-Solving.html
@@ -57,7 +57,7 @@
 
 <section class="research-section">
     <h2>Puzzle Datasets</h2>
-    <p>You can view and download our puzzle datasets from this <a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">portal</a>, in which they are separated into 5 different databases:</p>
+    <p>You can view and download our puzzle datasets from this <a href="https://bgu365.sharepoint.com/:f:/s/ICVL/Egu8gJU0bdxPucSfW514L50BrtKasbNZ9eBDLRlTxj3h2g?e=SQj0W0" role="link">portal</a>, in which they are separated into 5 different databases:</p>
     <ul>
         <li><a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">DB1</a>: Apictorial puzzles with a circular shape for measurement of statistical properties (220 puzzles).</li>
         <li><a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">DB2</a>: General apictorial puzzles for solvers evaluation (15 puzzles).</li>
