Added new projects

--- a/pages/senior-projects.html
+++ b/pages/senior-projects.html
@@ -44,6 +44,9 @@
 <h3>Bird collision alert and monitoring systems (CS,SE)</h3>
 <p>During the year, millions of birds migrate, occupy the sky, and roost in stopover sites, day and night. Collisions with man-made structures (in particular, airplanes and helicopters) result in the deaths of many birds, occasional serious harm to people, and damages of millions of dollars each year. To reduce negative impacts on wildlife and human suffering, it is essential to monitor, track, alert, and actively engage to reduce the chances of collisions. In this joint project (or set of projects) with the Israeli Air Force (IAF), we aim to construct a (1) computer vision pipeline to monitor, track, and alert air traffic control towers about bird hazards in roosts and stopover sites, and (2) develop an automated system to engage with the threat and scare the birds away (e.g., with a drone). <strong>For details please contact:</strong> <a href="mailto:tidharlevari@gmail.com" role="link">Dr. Tidhar Lev Ari</a>, IAF, <a href="mailto:yotam.orchan@mail.huji.ac.il" role="link">Dr. Yotam Orchan</a>, IAF, or <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link">Prof. Ohad Ben-Shahar</a>.</p>
 
+<h3>Individual Animal Identification for Biological Research (CS,SE)</h3>
+<p>Bla Bla Bla. <strong>For details please contact:</strong> <a href="mailto:tidharlevari@gmail.com" role="link">Pro. Amos Buskila</a>, Life Sciences Department, or <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link">Prof. Ohad Ben-Shahar</a>.</p>
+
 <h3>Augmented reality for architectural design (CS,SE)</h3>
 <p>Architects and interior designers design draw their plans as 2D sketches. Customers, however, are not able to visualize their house from these drawings and desire 3D simulations of their house. How wonderful could it be if this gap could be bridged directly from the 2D drawing using one’s smartphone? In this project, we will implement a simple augmented reality system that observes simple 2D drawings of one-floor houses and in real-time augments the proper 3D structure over it. Additional features over the basic capacity will be considered along the project. <strong>For details please contact:</strong> <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link">Prof. Ohad Ben-Shahar</a>.</p>
 
@@ -54,6 +57,8 @@
 
 <h3>Computational and Robotic Art (CS,SE)</h3>
 <p>Computation is not the first thing that comes to mind in the context of artistic expression. But sometimes, art cannot be created without computation, and sometimes computation facilitates new versions of existing art. Both paths are another manifestation of the emerging field of <a href="https://en.wikipedia.org/wiki/Digital_humanities" role="link">digital humanities</a>. In this class of projects, we will explore such combinations, possibly with the collaboration of the <a href="https://pre.bgu.ac.il/humsos/art/Pages/default.aspx" role="link">Department of the Arts at BGU</a>. A first project will try to replicate Petros Vrellis’ “<a href="http://artof01.com/vrellis/works/knit.html" role="link">A New Way to Knit</a>”, though not necessarily for a circular frame but for an arbitrary convex one. Depending on the size of the team and the scope and scale of the project, a physical implementation using a robotic arm will be included also. Additional projects may include 3D printing as well. Fun is guaranteed! <strong>For details please contact:</strong> <a href="mailto:ben-shahar@cs.bgu.ac.il" role="link">Prof. Ohad Ben-Shahar</a>.</p>
+
+<!--    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
 
 <h2>Recently completed projects</h2>
 
