--- a/pages/research.html
+++ b/pages/research.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,6 +24,12 @@
         </a>
     </div>
     <div class="research-item">
+        <a href="pages/researches/Repair.html">
+            <img src="./assets/research/gifs/reserach-repair.gif" alt="Convex Partition Jigsaw Puzzle Solving">
+            <p>Convex Partition Jigsaw Puzzle Solving</p>
+        </a>
+    </div>
+    <div class="research-item">
         <a href="pages/researches/Computational-Polygonal-Puzzle-Solving.html">
             <img src="./assets/research/gifs/apictorial_polygonal_reconstruction3.gif" alt="Computational Polygonal Puzzle Solving">
             <p>Computational Polygonal Puzzle Solving</p>
@@ -38,6 +45,12 @@
         <a href="pages/researches/hyperspectral-imaging.html">
             <img src="./assets/research/gifs/hs-animation1.gif" alt="Hyperspectral Imaging from low cost sensors">
             <p>Hyperspectral Imaging from low cost sensors</p>
+        </a>
+    </div>
+        <div class="research-item">
+        <a href="pages/researches/Convex_Partition_Jigsaw_Puzzle_Solving.html">
+            <img src="./assets/research/gifs/Convex-Pratition.gif" alt="Convex Partition Jigsaw Puzzle Solving">
+            <p>Convex Partition Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
