--- a/pages/researches/Repair.html
+++ b/pages/researches/Repair.html
@@ -16,35 +16,35 @@
 
                 <p>In the realm of archaeology, the task of piecing together fragmented artifacts presents a significant challenge, akin to solving complex puzzles. These artifacts, often discovered in a deteriorated state, require meticulous reassembly to reveal their historical significance. Traditionally, this process has been labor-intensive, relying on the expertise and patience of archaeologists who manually fit the pieces together. However, with advancements in modern computer vision algorithms, the field is undergoing a technological revolution, transforming how these ancient puzzles are solved—faster and more accurately than ever before.</p>
 
-                <h2>The RePAIR Project</h2>
+                <h2>The repair Project</h2>
                 <p>Nearly 2,000 years ago, the eruption of Mount Vesuvius near the Roman city of Pompeii buried the town and its inhabitants under layers of volcanic ash. This catastrophic event, while tragic, inadvertently created a time capsule of ancient artifacts that offer unparalleled insights into Roman life. Among these are the vibrant frescos (mural paintings) that once decorated the city's walls. These frescos, rich in color and narrative, depict daily life, beliefs, and the cultural customs of ancient Pompeiians.</p>
 
                 <figure>
-                    <img src="./assets/research/Repair/1.png" alt="Fresco fragments from Pompeii">
+                    <img src="./assets/research/repair/1.png" alt="Fresco fragments from Pompeii">
                 </figure>
 
-                <p>Over time, however, both natural forces and human activity have caused many of these frescos to crumble into fragments—some heavily eroded, others lost forever. Archaeologists today are on a mission to reconstruct these fragments in an effort to better understand the rich history of Pompeii. Enter the RePAIR project (Reconstructing the Past: Artificial Intelligence and Robotics meet Cultural Heritage), an innovative international initiative, that aims to transform the process of artifact reconstruction by leveraging cutting-edge technology.</p>
+                <p>Over time, however, both natural forces and human activity have caused many of these frescos to crumble into fragments—some heavily eroded, others lost forever. Archaeologists today are on a mission to reconstruct these fragments in an effort to better understand the rich history of Pompeii. Enter the repair project (Reconstructing the Past: Artificial Intelligence and Robotics meet Cultural Heritage), an innovative international initiative, that aims to transform the process of artifact reconstruction by leveraging cutting-edge technology.</p>
 
                 <figure>
-                    <img src="./assets/research/Repair/2.png" alt="RePAIR project technology">
+                    <img src="./assets/research/repair/2.png" alt="repair project technology">
                 </figure>
 
-                <p>The RePAIR project involves several international teams, with the Israeli group from the Interdisciplinary Computational Vision Lab at BGU leading the development of a sophisticated visual puzzle-solving algorithm. This algorithm is designed to autonomously guide the reconstruction of Pompeiian frescos by analyzing and fitting together thousands of scattered pieces.</p>
+                <p>The repair project involves several international teams, with the Israeli group from the Interdisciplinary Computational Vision Lab at BGU leading the development of a sophisticated visual puzzle-solving algorithm. This algorithm is designed to autonomously guide the reconstruction of Pompeiian frescos by analyzing and fitting together thousands of scattered pieces.</p>
 
                 <figure>
-                    <img src="./assets/research/Repair/3.png" alt="Algorithm analyzing fresco fragments">
+                    <img src="./assets/research/repair/3.png" alt="Algorithm analyzing fresco fragments">
                 </figure>
 
                 <h2>Code / Data</h2>
-                <p>The RePAIR project's official GitHub repository hosts code and datasets relevant to the reconstruction work, allowing researchers and developers alike to explore and contribute to the ongoing efforts.</p>
+                <p>The repair project's official GitHub repository hosts code and datasets relevant to the reconstruction work, allowing researchers and developers alike to explore and contribute to the ongoing efforts.</p>
 
                 <h2>Published Papers</h2>
                 <ul>
-                    <li>M. C. Napolitano et al., <a href="https://example.com/link_to_paper">The Dataset of Paintings from the Pompeii Archive: A Task of the RePAIR Project</a>, In the Proceedings of Pictura Parietum. Connessioni mediterranee in età ellenistica e romana (AIRPA VI), Agrigento, Italy, July 2023.</li>
+                    <li>M. C. Napolitano et al., <a href="https://example.com/link_to_paper">The Dataset of Paintings from the Pompeii Archive: A Task of the repair Project</a>, In the Proceedings of Pictura Parietum. Connessioni mediterranee in età ellenistica e romana (AIRPA VI), Agrigento, Italy, July 2023.</li>
                 </ul>
 
                 <h2>Acknowledgments</h2>
-                <p>The RePAIR project is proudly supported by the EU under the Horizon 2020 program.</p>
+                <p>The repair project is proudly supported by the EU under the Horizon 2020 program.</p>
             </section>
         </main>
     </div>
