project name fix

--- a/pages/research.html
+++ b/pages/research.html
@@ -26,7 +26,7 @@
     <div class="research-item">
         <a href="pages/researches/Repair.html">
             <img src="./assets/research/gifs/reserach-repair.gif" alt="Convex Partition Jigsaw Puzzle Solving">
-            <p>Convex Partition Jigsaw Puzzle Solving</p>
+            <p>Archeological Puzzle solving</p>
         </a>
     </div>
     <div class="research-item">
