Computational Polygonal Puzzle Solving DATA SETS

--- a/pages/researches/Computational-Polygonal-Puzzle-Solving.html
+++ b/pages/researches/Computational-Polygonal-Puzzle-Solving.html
@@ -59,11 +59,11 @@
     <h2>Puzzle Datasets</h2>
     <p>You can view and download our puzzle datasets from this <a href="https://bgu365.sharepoint.com/:f:/s/ICVL/Egu8gJU0bdxPucSfW514L50BrtKasbNZ9eBDLRlTxj3h2g?e=SQj0W0" role="link">portal</a>, in which they are separated into 5 different databases:</p>
     <ul>
-        <li><a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">DB1</a>: Apictorial puzzles with a circular shape for measurement of statistical properties (220 puzzles).</li>
-        <li><a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">DB2</a>: General apictorial puzzles for solvers evaluation (15 puzzles).</li>
-        <li><a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">DB3</a>: Perturbed square pictorial puzzles (40 puzzles).</li>
-        <li><a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">DB4</a>: General pictorial puzzles (62 puzzles).</li>
-        <li><a href="https://icvl.cs.bgu.ac.il/puzzle-solving-datasets/" role="link">DB5</a>: Square pictorial puzzles (181 puzzles).</li>
+        <li><a href="https://bgu365.sharepoint.com/:u:/s/ICVL/EU9-nDa3oUZDs4FDg3Tu2e8BNvVq-JVVsDm4PfaRIM2isQ?e=Oz3ZiR" role="link">DB1</a>: Apictorial puzzles with a circular shape for measurement of statistical properties (220 puzzles).</li>
+        <li><a href="https://bgu365.sharepoint.com/:u:/s/ICVL/EV4nh5ElD7lMtEAPNGuLIxcBhO9WPXMngzTs0kWnuW_mUA?e=xa5MB8" role="link">DB2</a>: General apictorial puzzles for solvers evaluation (15 puzzles).</li>
+        <li><a href="https://bgu365.sharepoint.com/:u:/s/ICVL/Ed7DHyv1j2ZOl0ARzqG6PuYBLwkf26AbwmI6WSg7oV8Mig?e=cDNREX" role="link">DB3</a>: Perturbed square pictorial puzzles (40 puzzles).</li>
+        <li><a href="https://bgu365.sharepoint.com/:u:/s/ICVL/ESyTnBc8JVFOpEe8iLu5ixgBn-LMl7uURs2whBNk_B7gKQ?e=M1f57m" role="link">DB4</a>: General pictorial puzzles (62 puzzles).</li>
+        <li><a href="https://bgu365.sharepoint.com/:u:/s/ICVL/Ec2wXRr-bFlPu7xV9KwIp8sBNx7tuyAxuM5CdxLUC1eDlA?e=p4c88w" role="link">DB5</a>: Square pictorial puzzles (181 puzzles).</li>
     </ul>
     <p>Underlying the datasets is a procedure for selecting a random global shape and the random cuts. The former is based on the convex hull of a set of random sample points and the cuts are selected by pairs of random points in the interior of this convex hull.</p>
     <p>An example of one apictorial synthesized polygonal puzzle (30 cuts, 200 pieces) is shown in this figure. On the left are the random points and their convex hull, in the middle column are the cuts and the ground truth solution, and on the right are the pieces after randomly scrambling them both in position and orientation, or what we call the bag of pieces. This bag is also the riddle to be solved, and thus the input provided to potential solvers. If the puzzle is intended to be pictorial, the global polygon is covered with a random image selected from a public domain repository.</p>
