Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving  FIXES

--- a/pages/researches/Multi-Phase-Relaxation.html
+++ b/pages/researches/Multi-Phase-Relaxation.html
@@ -33,10 +33,18 @@
     <h2>Papers</h2>
     <ul>
         <li>Vardi, B., Torcinovich, A., Khoroshiltseva, M., Pelillo, M. and Ben-Shahar, O. Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving. In Proceedings of the 18th International Joint Conference on Computer Vision, Imaging and Computer Graphics Theory and Applications (VISIGRAPP 2023).</li>
-        <li><a href="[Paper Link]">Paper Title 2</a></li>
     </ul>
 </section>
 
+<section class="research-section">
+    <h2>Related Papers</h2>
+    <ul>
+        <li>
+            Khoroshiltseva, M., Vardi, B., Torcinovich, A., Traviglia, A., Ben-Shahar, O. and Pelillo, M., 2021.
+            <a href="https://bgu365.sharepoint.com/:b:/s/ICVL/EZpSnN-TfgVIrbyUPT0DSB4BZbDWrP-xMatZO5e3WnoJnQ?e=gExUi5">Jigsaw puzzle solving as a consistent labeling problem </a>. In Computer Analysis of Images and Patterns: 19th International Conference, CAIP 2021, Virtual Event, September 28–30, 2021, Proceedings, Part II 19 (pp. 392-402). Springer International Publishing.
+        </li>
+    </ul>
+</section>
 <section class="research-section">
     <h2>Acknowledgments</h2>
     <p>This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 964854, the Helmsley Charitable Trust through the ABC Robotics Initiative, and the Frankel Fund of the Computer Science Department at Ben-Gurion University.</p>
