more projects assest and DATASETS fixes

--- a/pages/researches/Curve-completion-in-the-tangent-bundle.html
+++ b/pages/researches/Curve-completion-in-the-tangent-bundle.html
@@ -25,6 +25,7 @@
 <section class="research-section">
     <h3>The tangent bundle approach</h3>
     <p>Recent computational, neurophysiological, and psychophysical studies suggest that completed contours emerge from activation patterns of orientation selective cells in the primary visual cortex, or V1. In this project we suggest a theory that models these patterns as 3D curves in the mathematical continuous space R^2 – S^1, a.k.a. the unit tangent bundle associated with the image plane R^2. This space nicely abstracts the basic functional organization of V1 and thus we propose that the completed shape may follow physical/biological principles that are conveniently abstracted and analyzed in this space. We implement our theories by numerical and biologically plausible algorithms to show ample experimental results of visually completed curves in various scenes.</p>
+    <img src="./assets/research/Curve-completion-in-the-tangent-bundle/curve_completion_in_the_tangent_bundle.png" alt="Research Image">
 </section>
 
 <section class="research-section">
@@ -47,19 +48,15 @@
     <div class="image-group">
         <figure>
             <img src="./assets/research/Curve-completion-in-the-tangent-bundle/TBE-Fig07A-Effect_of_Inducer_Curvature.bmp" alt="Image description 1">
-            <figcaption>Image description 1</figcaption>
         </figure>
         <figure>
             <img src="./assets/research/Curve-completion-in-the-tangent-bundle/TBE-Fig09-Completions-with-Effect_of_Inducer_Curvature.bmp" alt="Image description 2">
-            <figcaption>Image description 2</figcaption>
         </figure>
         <figure>
             <img src="./assets/research/Curve-completion-in-the-tangent-bundle/TBE-Fig12-Exmaple-Completions.bmp" alt="Image description 1">
-            <figcaption>Image description 1</figcaption>
         </figure>
         <figure>
             <img src="./assets/research/Curve-completion-in-the-tangent-bundle/TBE-Fig13-Exmaple-Completions.bmp" alt="Image description 2">
-            <figcaption>Image description 2</figcaption>
         </figure>
     </div>
 </section>
