--- a/pages/researches/Square-Jigsaw-Puzzle-Solving.html
+++ b/pages/researches/Square-Jigsaw-Puzzle-Solving.html
@@ -27,8 +27,8 @@
     <h2>Downloads</h2>
     <p>Download Matlab Code (please refer to the Programmer’s Manual for additional documentation and instructions)</p>
     <ul>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/GeneratePuzzle.m" role="link">GeneratePuzzle.m</a> – A function that scrambles an image</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolver.m" role="link">JigsawSolver.m</a> – The greedy jigsaw (V 2.19) solver code</li>
+        <li><a href="https://bgu365.sharepoint.com/:u:/s/ICVL/EWUZHd300E9Cjus5kDNtXhQBMChj7-NzOygOilDZO25SfA?e=j5K3n4" role="link">GeneratePuzzle.m</a> – A function that scrambles an image</li>
+        <li><a href="https://bgu365.sharepoint.com/:t:/s/ICVL/ESSiBKhvFVlIjjAhLYNzgAUB6Gdmsityl63-kwsrrfua3w?e=S2edIh" role="link">JigsawSolver.m</a> – The greedy jigsaw (V 2.19) solver code</li>
     </ul>
 </section>
 
@@ -36,10 +36,10 @@
     <h2>Download Puzzle Data Sets</h2>
     <ul>
         <li><a href="http://people.csail.mit.edu/taegsang/Documents/jigsawCode.zip" role="link">The Cho et al. (2010) dataset</a>: 20 images. 432 parts of size 28×28. Solver’s source code included</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/ImageDB-540parts-McGill.zip" role="link">The McGill Calibrated Colour Image Database</a>: 20 images. 540 parts of size 28×28.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/ImageDB-805parts-BGU.zip" role="link">BGU-805 Dataset</a>: 20 images. 805 parts of size 28×28. If you need to use it, please cite <a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Pomeranz_Shemesh_and_Ben_Shahar-A_Fully_Automated_Greedy_Square_Jigsaw_Puzzle_Solver.pdf" role="link">our CVPR 2011</a> paper.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/ImageDB-2360parts-BGU.zip" role="link">BGU-2360 Dataset</a>: 3 images. 2360 parts of size 28×28. If you need to use it, please cite <a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Pomeranz_Shemesh_and_Ben_Shahar-A_Fully_Automated_Greedy_Square_Jigsaw_Puzzle_Solver.pdf" role="link">our CVPR 2011</a> paper.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/ImageDB-3300parts-BGU.zip" role="link">BGU-3300 Dataset</a>: 3 images. 3300 parts of size 28×28. If you need to use it, please cite <a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Pomeranz_Shemesh_and_Ben_Shahar-A_Fully_Automated_Greedy_Square_Jigsaw_Puzzle_Solver.pdf" role="link">our CVPR 2011</a> paper.</li>
+        <li><a href="https://bgu365.sharepoint.com/:f:/s/ICVL/EoVkouPnrHNPiQBK_-4deaIBSplOdgNU8uQDah9wCA0T0Q?e=d7qqFy" role="link">The McGill Calibrated Colour Image Database</a>: 20 images. 540 parts of size 28×28.</li>
+        <li><a href="https://bgu365.sharepoint.com/:f:/s/ICVL/EpcqN9MKhqhOs0N1vDZwdFYB43R01ne8DUjD8eJad-rYYQ?e=b8CVAm" role="link">BGU-805 Dataset</a>: 20 images. 805 parts of size 28×28. If you need to use it, please cite <a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Pomeranz_Shemesh_and_Ben_Shahar-A_Fully_Automated_Greedy_Square_Jigsaw_Puzzle_Solver.pdf" role="link">our CVPR 2011</a> paper.</li>
+        <li><a href="https://bgu365.sharepoint.com/:f:/s/ICVL/EsaUC7K0ZDNDnkQTiXcC46QBg6y7Y06FZXgtX4UeIdvrFw?e=JqR9Pa" role="link">BGU-2360 Dataset</a>: 3 images. 2360 parts of size 28×28. If you need to use it, please cite <a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Pomeranz_Shemesh_and_Ben_Shahar-A_Fully_Automated_Greedy_Square_Jigsaw_Puzzle_Solver.pdf" role="link">our CVPR 2011</a> paper.</li>
+        <li><a href="https://bgu365.sharepoint.com/:f:/s/ICVL/EqU2VJYC6ARCu0j1MQLS1HQBUr2a3rDTN__DFHsHdzTaqQ?e=u5Ptg6" role="link">BGU-3300 Dataset</a>: 3 images. 3300 parts of size 28×28. If you need to use it, please cite <a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Pomeranz_Shemesh_and_Ben_Shahar-A_Fully_Automated_Greedy_Square_Jigsaw_Puzzle_Solver.pdf" role="link">our CVPR 2011</a> paper.</li>
     </ul>
 </section>
 
