more projects assets and DATASETS fixes

--- a/pages/researches/Free_Boundary_Conditions_Active_Contours.html
+++ b/pages/researches/Free_Boundary_Conditions_Active_Contours.html
@@ -32,7 +32,7 @@
                 <h2>Papers</h2>
                 <ul>
                     <li><a href="http://www.cs.bgu.ac.il/~ben-shahar/Publications/2011-Shemesh_and_Ben_Shahar-Free_Boundary_Conditions_Active_Contours_with_Applications_for_Vision.pdf">ISVC 2011 paper</a>.</li>
-                    <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-FBCAC-files/2011-Shemesh_and_Ben_Shahar-Free_Boundary_Conditions_Active_Contours_with_Applications_for_Vision-Supplementary_material.pdf">ISVC 2011 Supplemental material</a>: Shows additional mathematical analyses.</li>
+                    <li><a href="https://bgu365.sharepoint.com/:b:/s/ICVL/EfMdX-5WuIBNtdIltYj3kTUBohGQmNIUBjJyqUe0Ax06bA?e=y2rJcl">ISVC 2011 Supplemental material</a>: Shows additional mathematical analyses.</li>
                 </ul>
 
                 <h2>Selected-Demos-and-Applications</h2>
@@ -66,7 +66,7 @@
                 </div>
 
                 <h2>Acknowledgments</h2>
-                <p>This research is a joint work by <a href="http://www.cs.bgu.ac.il/~shemeshm/">Michal Shemesh</a> and <a href="http://www.cs.bgu.ac.il/~obs/">Ohad Ben-Shahar</a> of the <a href="http://www.cs.bgu.ac.il/">Computer Science Department</a>, <a href="http://in.bgu.ac.il/en/Pages/default.aspx">Ben-Gurion University of The Negev</a>, <a href="http://en.wikipedia.org/wiki/Beersheba">Beer Sheva</a>, <a href="http://en.wikipedia.org/wiki/Israel">Israel</a>. It was presented in the <a href="http://www.isvc.net/11/">International Symposium on Visual Computing (ISVC), 2011,</a> and the <a href="http://www.technologies.co.il/beta/Conference.aspx?Id=81">Israel Machine Vision Conference (IMVC) 2012</a>.</p>
+                <p>This research is a joint work by Michal Shemesh and <a href="https://www.cs.bgu.ac.il/~obs/">Ohad Ben-Shahar</a> of the <a href="https://www.cs.bgu.ac.il/">Computer Science Department</a>, <a href="https://in.bgu.ac.il/en/Pages/default.aspx">Ben-Gurion University of The Negev</a>, <a href="https://en.wikipedia.org/wiki/Beersheba">Beer Sheva</a>, <a href="https://en.wikipedia.org/wiki/Israel">Israel</a>. It was presented in the <a href="https://www.isvc.net/">International Symposium on Visual Computing (ISVC), 2011,</a> and the <a href="https://www.imvc.co.il/">Israel Machine Vision Conference (IMVC) </a>.</p>
                 <p>This work was funded in part by the European Commission in the 7th Framework Programme (CROPS GA no 246252). We also thank the generous support of the Frankel fund, the Paul Ivanier center for Robotics Research and the Zlotowski Center for Neuroscience at Ben-Gurion University.</p>
             </section>
         </main>
