Adding lost resources

--- a/pages/researches/Free_Boundary_Conditions_Active_Contours.html
+++ b/pages/researches/Free_Boundary_Conditions_Active_Contours.html
@@ -41,10 +41,10 @@
 
                 <div class="image-group">
                     <figure>
-                        <img src="https://www.cs.bgu.ac.il/~icvl/projects/project-FBCAC-files/Free_BC-anim.gif" alt="Free BC Animation" width="203" height="280">
+                        <img src="./assets/research/Free-Boundary-Conditions-Active-Contours/free_bc-anim.gif" alt="Free BC Animation" width="203" height="280">
                     </figure>
                     <figure>
-                        <img src="https://www.cs.bgu.ac.il/~icvl/projects/project-FBCAC-files/Pepper-ainm.gif" alt="Pepper Animation" width="291" height="280">
+                        <img src="./assets/research/Free-Boundary-Conditions-Active-Contours/Pepper-ainm.gif" alt="Pepper Animation" width="291" height="280">
                     </figure>
                 </div>
 
@@ -61,7 +61,7 @@
                         <img src="./assets/research/Free-Boundary-Conditions-Active-Contours/butterfly.png" alt="Butterfly Seam Carving" width="260" height="335">
                     </figure>
                     <figure>
-                        <img src="https://www.cs.bgu.ac.il/~icvl/projects/project-FBCAC-files/butterfly_zoom.png" alt="Butterfly Zoom Seam Carving" width="260" height="334">
+                        <img src="./assets/research/Free-Boundary-Conditions-Active-Contours/butterfly_zoom.png" alt="Butterfly Zoom Seam Carving" width="260" height="334">
                     </figure>
                 </div>
 
