--- a/pages/researches/Square-Jigsaw-Puzzle-Solving.html
+++ b/pages/researches/Square-Jigsaw-Puzzle-Solving.html
@@ -46,13 +46,13 @@
 <section class="research-section">
     <h2>Selected Demos (Higher quality than YouTube)</h2>
     <ul>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolverInActionMovie.wmv" role="link">JigsawSolverInActionMovie.wmv</a>: The greedy solver in action on a modest size problem</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolverVisualizationMovie.wmv" role="link">JigsawSolverVisualizationMovie.wmv</a>: Visualization of the solution from randomly scrambled state to solved state.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolverInAction-540parts.wmv" role="link">JigsawSolverInAction-540parts.wmv</a>: The solver in action on a 540 piece puzzle from the McGill DB.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolverInAction-805parts.wmv" role="link">JigsawSolverInAction-805parts.wmv</a>: The solver in action on a 805 piece puzzle from the BGU-805 DB.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolverInAction3300parts.wmv" role="link">JigsawSolverInAction3300parts.wmv</a>: The solver in action on a 3300 piece puzzle from the BGU-3300 set.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolverInActionBiggestPuzzle-10000parts.wmv" role="link">JigsawSolverInActionBiggestPuzzle-10000parts.wmv</a>: The solver in action on a 10,000 piece puzzle.</li>
-        <li><a href="http://www.cs.bgu.ac.il/~icvl/projects/project-jigsaw-files/JigsawSolverVisualization10000parts.wmv" role="link">JigsawSolverVisualization10000parts.wmv</a>: Visualization of the 10,000 piece solution.</li>
+        <li><a href="./assets/research/Square-Jigsaw-Puzzle-Solving/JigsawSolverInActionMovie.wmv"  role="link">JigsawSolverInActionMovie.wmv</a>: The greedy solver in action on a modest size problem</li>
+        <li><a href="./assets/research/Square-Jigsaw-Puzzle-Solving/JigsawSolverVisualizationMovie.wmv" role="link">JigsawSolverVisualizationMovie.wmv</a>: Visualization of the solution from randomly scrambled state to solved state.</li>
+        <li><a href="./assets/research/Square-Jigsaw-Puzzle-Solving/JigsawSolverInAction-540parts.wmv" role="link">JigsawSolverInAction-540parts.wmv</a>: The solver in action on a 540 piece puzzle from the McGill DB.</li>
+        <li><a href="./assets/research/Square-Jigsaw-Puzzle-Solving/JigsawSolverInAction-805parts.wmv" role="link">JigsawSolverInAction-805parts.wmv</a>: The solver in action on a 805 piece puzzle from the BGU-805 DB.</li>
+        <li><a href="./assets/research/Square-Jigsaw-Puzzle-Solving/JigsawSolverInAction3300parts.wmv" role="link">JigsawSolverInAction3300parts.wmv</a>: The solver in action on a 3300 piece puzzle from the BGU-3300 set.</li>
+        <li><a href="./assets/research/Square-Jigsaw-Puzzle-Solving/JigsawSolverInActionBiggestPuzzle-10000parts.wmv" role="link">JigsawSolverInActionBiggestPuzzle-10000parts.wmv</a>: The solver in action on a 10,000 piece puzzle.</li>
+        <li><a href="./assets/research/Square-Jigsaw-Puzzle-Solving/JigsawSolverVisualization10000parts.wmv" role="link">JigsawSolverVisualization10000parts.wmv</a>: Visualization of the 10,000 piece solution.</li>
     </ul>
 </section>
 
