--- a/pages/header.html
+++ b/pages/header.html
@@ -13,6 +13,10 @@
     <div>
         <nav>
             <ul id="nav-list">
+                <li><a href="./index.html" >
+                    <img src="/ICVL/assets/home.png" alt="Home Icon"  class="home-icon">
+                </a>
+                </li>
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/members.html">Members</a></li>
                 <li><a href="pages/research.html">Research</a></li>
